# acroba

./: .env  .gitignore  Makefile  readme.md
acroba-modules/VirtualGym/acroba_resources/: .gitattributes  CMakeLists.txt  README.md  package.xml
acroba-modules/VirtualGym/acroba_resources/config/: kr20r1810_control.yaml  kr20r1810_control_no_namespace.yaml  pgc50_controllers.yaml  simple_gripper_controllers.yaml
acroba-modules/VirtualGym/acroba_resources/launch/: kr20r1810_control.launch  kr20r1810_gazebo.launch  pgc50_control.launch  pgc50_gazebo.launch  simple_gripper_control.launch
acroba-modules/VirtualGym/acroba_resources/meshes/ACROBA Cobot Cell Assembly Rev A v17/: ITEM 4040x920 v003.dae  ITEM 4040x920 v2.dae  RG2 Gripper Assembly Rev B v2.dae  Robot Plate Rev3 v27.dae
acroba-modules/VirtualGym/acroba_resources/meshes/ACROBA Industrial Robot Assembly Rev B v25/: Acroba Camera Frame Assembly Rev B v2.dae  ITEM 4040x920 v003.dae  ITEM 4040x920 v004.dae  ITEM 4040x920 v2.dae  LC Assembly Rear LHS v23.dae  LC Assembly Rear RHS v13.dae  Rear Guarding Assembly v16.dae  Robot Plate Rev3 v27.dae
acroba-modules/VirtualGym/acroba_resources/meshes/DummyTool/: Dummy Tool.stp  DummyToolDec.dae
acroba-modules/VirtualGym/acroba_resources/meshes/IMR_cell/: cube_kuka_m.dae  imr_cell_collision.dae  imr_cell_collision.stl  imr_cell_collision_inspection.dae  smartshift2_rotated_1.asset  smartshift2_rotated_2.asset  smartshift_rotated_1.asset  smartshift_rotated_2.asset  smartshift_rotated_3.asset  smartshift_rotated_4.asset  smartshift_rotated_5.asset
acroba-modules/VirtualGym/acroba_resources/meshes/general/: brida_convex.dae  brida_simple.dae
acroba-modules/VirtualGym/acroba_resources/meshes/kuka_kr20/: base.prefab  base.stl  base_0.asset  base_1.asset  base_convex.prefab  base_convex.stl  base_convex_0.asset  base_convex_1.asset  link1.prefab  link1_0.asset  link1_1.asset  link1_2.asset  link1_3.asset  link1_4.asset  link1_5.asset  link1_6.asset  link1_convex.prefab  link1_convex.stl  link1_convex_0.asset  link1_convex_1.asset  link2.prefab  link2_0.asset  link2_1.asset  link2_2.asset  link2_3.asset  link2_4.asset  link2_5.asset  link2_6.asset  link2_7.asset  link2_convex.prefab  link2_convex.stl  link2_convex_0.asset  link2_convex_1.asset  link3.prefab  link3_0.asset  link3_1.asset  link3_1.prefab  link3_1.stl  link3_1_0.asset  link3_1_1.asset  (+48 more)
acroba-modules/VirtualGym/acroba_resources/meshes/pgc140/: body_centered_1.asset  finger_holder_1_centered.dae  finger_holder_1_centered.stl  finger_holder_1_centered_1.asset  finger_holder_1_centered_2.asset  finger_holder_2_centered.dae  finger_holder_2_centered.stl  finger_holder_2_centered_1.asset  finger_holder_2_centered_2.asset
acroba-modules/VirtualGym/acroba_resources/meshes/pgc50/: body.dae  body.prefab  body.stl  body_0.asset  body_1.asset  body_10.asset  body_100.asset  body_101.asset  body_102.asset  body_103.asset  body_104.asset  body_105.asset  body_106.asset  body_107.asset  body_108.asset  body_109.asset  body_11.asset  body_110.asset  body_111.asset  body_112.asset  body_113.asset  body_114.asset  body_115.asset  body_116.asset  body_117.asset  body_118.asset  body_119.asset  body_12.asset  body_120.asset  body_121.asset  body_122.asset  body_123.asset  body_124.asset  body_125.asset  body_126.asset  body_127.asset  body_128.asset  body_129.asset  body_13.asset  body_130.asset  (+144 more)
acroba-modules/VirtualGym/acroba_resources/meshes/schmalz/: schmalz_cobopump.stl  schmalz_cobopump_convexhull.stl
acroba-modules/VirtualGym/acroba_resources/meshes/schunk_EGP40/: base.prefab  base.stl  base_0.asset  body.prefab  body_0.asset  body_1.asset  body_10.asset  body_2.asset  body_3.asset  body_4.asset  body_5.asset  body_6.asset  body_7.asset  body_8.asset  body_9.asset  body_convex.prefab  body_convex.stl  body_convex_0.asset  body_convex_1.asset  finger_1.prefab  finger_1.stl  finger_1_0.asset  finger_2.prefab  finger_2.stl  finger_2_0.asset
acroba-modules/VirtualGym/acroba_resources/urdf/: IMR_cell.urdf  IMR_cell.xacro  IMR_zivid_cell.urdf  IMR_zivid_cell.xacro  IMR_zivid_cell_inspection.urdf  IMR_zivid_cell_inspection.xacro  cabka_robot_camera.urdf  cabka_robot_camera.xacro  cabka_robot_drill.urdf  cabka_robot_drill.xacro  cabka_tool.xacro  cabka_tool_macro.xacro  collaborative_cell.urdf  collaborative_cell.xacro  collaborative_cell_obstacles.urdf  collaborative_cell_ros.xacro  common_shapes_macro.xacro  gp50.urdf  gp50.xacro  gp50_macro.xacro  icpe_cell1.urdf  icpe_cell1.xacro  icpe_cell2.urdf  icpe_cell2.xacro  icpe_cell3.urdf  icpe_cell3.xacro  ikor_cell_bad_inertia.urdf  ikor_cell_bad_intertia.xacro  ikor_cell_camera.urdf  ikor_cell_camera.xacro  ikor_cell_fix_inertia.urdf  ikor_cell_fix_inertia_removing_joints.urdf  ikor_cell_readme.txt  ikor_robot.urdf  ikor_robot.xacro  industrial_cell.urdf  industrial_cell.xacro  industrial_cell_obstacles.urdf  industrial_cell_ros.xacro  kr20r1810.urdf  (+65 more)
acroba-modules/VirtualGym/acroba_unity_msgs/: CMakeLists.txt  package.xml
acroba-modules/VirtualGym/acroba_unity_msgs/action/: ExecuteTrajectory.action  RGBDSensor.action  VibratingTableControl.action
acroba-modules/VirtualGym/acroba_unity_msgs/msg/: BiState.msg  CoilOperation.msg  CollisionState.msg  GripperControlCommand.msg  HumanCommand.msg  HumanState.msg  HumanStates.msg  JointController.msg  JointControllers.msg  ModelStates.msg  Stator.msg  StatorStation.msg  TableVibration.msg  UnityErrorCode.msg  UnityLight.msg  UnitySimulationState.msg
acroba-modules/VirtualGym/acroba_unity_msgs/srv/: ExecuteTrajectory.srv  GetControllers.srv  GetImage.srv  GetLights.srv  PieceSpawner.srv  ResetScene.srv  SetControllers.srv  SetLights.srv
acroba-modules/VirtualGym/examples/acroba_gym/: CMakeLists.txt  package.xml  setup.py
acroba-modules/skills/skills_msgs/: CMakeLists.txt  Dockerfile  package.xml
acroba-modules/taskplanner/watch_assembly/: CMakeLists.txt  package.xml  setup.cfg  setup.py
acroba-modules/taskplanner/watch_assembly/scripts/: watchmaker.py
acroba-modules/taskplanner/watch_assembly/watch_assembly/: pieces.py
(+1115 files in other folders)
