<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atp_bt_creator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="acroba@todo.todo">acroba</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>skills_msgs</exec_depend>
  
  <export>
  </export>
</package>
